--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "unigestagenda",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,29 +8,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/poppins": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-navigation/bottom-tabs": "^6.0.9",
+    "expo": "~42.0.1",
+    "expo-status-bar": "~1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-web": "~0.13.12",
+    "expo-font": "~9.2.1",
+    "@expo/vector-icons": "^12.0.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-reanimated": "~2.2.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~44.0.0",
-    "expo-font": "~10.0.4",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native-stack": "*",
+    "react-native-safe-area-context": "3.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
